--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,6 @@ version: ${project.version}
 main: me.axilirate.friendsystem.FriendSystem
 api-version: 1.17
 depends: [Vault]
+commands:
+  friends:
+    usage: /<command>
